--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "jsx-loader": "^0.13.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
